--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="eventos.js"defer></script>
+    <script src="eventos.js">defer</script>
 </head>
 <body>
-    <div style="padding: 5px; background-color: green;"> 
-    <button onclick="alert('Hola')">Saludar</button>
+    <div style="padding: 5px; background-color: green;" id="miDiv"> 
+    <button id="miBoton"  onclick="alert('Hola')">Saludar</button>
 </div>
 </body> 
 </html>
